--- a/style.css
+++ b/style.css
@@ -56,11 +56,9 @@
   min-height: 100px;
   font-family: Roboto;
   display: flex;
-  justify-content: space-between;
-  word-break: break-all;
+  flex-direction: column;
   color: #ffffff;
   font-size: 24px;
-  line-height: 28px;
   background: #070707;
   box-sizing: border-box;
   margin: 5px 0 0 10px;
@@ -69,10 +67,15 @@
   border-radius: 10px;
 }
 
+.info {
+  margin: inherit;
+}
+
 .close {
+  position: absolute;
   width: 50px;
   height: 50px;
-  padding: 0 20px 28px 0;
+  margin-left: 400px;
   opacity: 0.7;
   border: none;
   font: inherit;
@@ -84,7 +87,7 @@
   opacity: 1;
   cursor: pointer;
   transition: all 0.3s;
-  -webkit-tap-highlight-color: transparent;
+  outline: none;
 }
 
 .close:before, .close:after {
